--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "react_sandbox",
 	"version": "0.1.0",
+	"homepage": "./",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
@@ -9,7 +10,8 @@
 		"react": "^16.12.0",
 		"react-app-polyfill": "^1.0.6",
 		"react-dom": "^16.12.0",
-		"react-scripts": "3.3.1"
+		"react-scripts": "3.3.1",
+		"serve": "^11.3.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
